added bio and work cards

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,8 +9,8 @@
   --bg-color: #fcfcfc;
   --primary-color: #000000;
   --secondary-color: #b300ff;
-  --primary-shadow: #8b8eaf;
-  --secondary-shadow: #a17a69;
+  --primary-shadow: #e3e1e1;
+  --secondary-shadow: #e3e1e1;
   --bottom-margin: 0.5rem;
   --bottom-margin-2: 1rem;
   --line-height: 1.7rem;
@@ -91,3 +91,86 @@ nav ul li {
     display: none;
 }
 
+.hero {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2.5rem;
+    max-width: 68.75rem;
+    margin: auto;
+}
+
+.hero img {
+    height: 37.5rem;
+    width: 37.5rem;
+}
+
+.bio {
+    width: 25rem;
+    padding: 0.625rem;
+    /* border-radius: 6px;
+    box-shadow: 0px 2px 15px 2px var(--primary-shadow); */
+}
+
+.bio h2 {
+    font-weight: var(--medium-font);
+    margin-bottom: var(--bottom-margin);
+}
+
+.bio p {
+    font-weight: var(--normal-font);
+    line-height: var(--line-height);
+    padding: 0.3
+    rem 0;
+}
+
+.projects {
+    background-color: var(--bg-color);
+    padding: 32px 0;
+    margin-top: 2rem;
+}
+  
+.project-pic {
+    width: 65%;
+    height: 60%;
+} 
+  
+.projects-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.projects-title {
+    font-weight: var(--medium-font);
+    text-align: center;
+    margin-bottom: 1rem;
+}
+  
+.project-container {
+    text-align: center;
+    width: 21.875rem;
+    padding: 1rem;
+}
+
+.project-container p {
+    padding: 0.4rem;
+}
+  
+.project-title {
+    font-weight: var(--normal-font);
+    margin-bottom: var(--bottom-margin);
+}
+  
+.project-details {
+    font-weight: var(--normal-font);
+    margin-bottom: var(--bottom-margin);
+}
+  
+.project-card {
+    background-color: #fff;
+    border-radius: 11px;
+    box-shadow: 0 3px 10px var(--primary-shadow);
+    padding: 20px;
+    margin: 10px;
+}
