added responsiveness css and js

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,7 +8,7 @@
   --bold-font: 800;
   --bg-color: #fcfcfc;
   --primary-color: #000000;
-  --secondary-color: #b300ff;
+  --secondary-color: #e42158;
   --primary-shadow: #e3e1e1;
   --secondary-shadow: #e3e1e1;
   --bottom-margin: 0.5rem;
@@ -113,11 +113,13 @@ nav ul li {
 }
 
 .bio h2 {
+    background-color: var(--bg-color);
     font-weight: var(--medium-font);
     margin-bottom: var(--bottom-margin);
 }
 
 .bio p {
+    background-color: var(--bg-color);
     font-weight: var(--normal-font);
     line-height: var(--line-height);
     padding: 0.3
@@ -131,9 +133,9 @@ nav ul li {
 }
   
 .project-pic {
-    width: 65%;
+    width: 100%;
     height: 60%;
-} 
+}
   
 .projects-container {
     display: flex;
@@ -173,4 +175,132 @@ nav ul li {
     box-shadow: 0 3px 10px var(--primary-shadow);
     padding: 20px;
     margin: 10px;
+}
+
+.socials {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    right: 1%;
+    bottom: 50%;
+}
+  
+.socicon {
+    border-radius: 100%;
+    width: 2rem;
+    height: 2rem;
+}
+
+footer {
+    background-color: var(--bg-color);
+    padding: 1.25rem;
+    text-align: center;
+    margin: 2rem 0 0;
+}
+
+.scroll-up {
+    position: fixed;
+    right: 0.5%;
+    bottom: 3%;
+    cursor: pointer;
+}
+  
+.up-arrow {
+    width: 3rem;
+    height: 3rem;
+}
+
+/* Media queries for responsiveness */
+@media screen and (max-width: 720px) {
+    nav {
+        padding: 1.5rem 1rem;   
+    }
+    nav ul {
+        position: fixed;
+        background-color: var(--bg-color);
+        flex-direction: column;
+        top: 86px;
+        left: 10%;
+        width: 80%;
+        text-align: center;
+        transform: translateX(120%);
+        transition: transform 0.5s ease-in;
+    }
+  
+    nav ul li {
+        margin: 8px;
+    }
+  
+    .burger-menu {
+        display: block;
+    }
+  
+    nav ul.show {
+        transform: translateX(0);
+    }
+  
+    .hero {
+        margin-top: -4rem;
+        flex-direction: column;
+        gap: 0;
+    }
+  
+    .hero img {
+        height: 37.5rem;
+        width: 30rem;
+    }
+  
+    .bio {
+        margin-top: -7rem;
+        width: 20.5rem;
+    }
+  
+    .more-about {
+        margin-top: 2rem;
+        padding: 1rem 3.5rem;
+    }
+  
+    .more-about h2 {
+        text-align: center;
+    }
+  
+    .more-about p {
+        text-align: justify;
+    }
+  
+    .icon {
+        width: 5.875rem;
+        height: 5.25rem;
+    }
+  
+    .projects-container {
+        flex-direction: column;
+    }
+  
+    .project-container {
+        width: 20.875rem;
+    }
+  
+    .contact-form-container {
+        max-width: 23.75rem;
+    }
+}
+  
+@media screen and (max-width: 420px) {
+    .hero img {
+        height: 37.5rem;
+        width: 23rem;
+    }
+    
+    .bio {
+        width: 18.3rem;
+    }
+    
+    .project-container {
+        width: 17.875rem;
+    }
+    
+    .contact-form-container {
+        max-width: 17.75rem;
+    }
 }
