--- a/assets/projectPages/groovyAssets/groovycss/styles.css
+++ b/assets/projectPages/groovyAssets/groovycss/styles.css
@@ -106,90 +106,31 @@ nav ul li {
     width: 100%;
 }
 
-.bio {
-    width: 25rem;
-    padding: 0.625rem;
-    /* border-radius: 6px;
-    box-shadow: 0px 2px 15px 2px var(--primary-shadow); */
+.intro {
+    display: flex;
+    align-items: left;
+    justify-content: left;
+    gap: 2.5rem;
+    max-width: 68.75rem;
+    margin: auto;
 }
 
-.bio h2 {
-    background-color: var(--bg-color);
+.intro_left h2 {
     font-weight: var(--medium-font);
     margin-bottom: var(--bottom-margin);
 }
 
-.bio p {
-    background-color: var(--bg-color);
+.intro_right h4 {
+    margin-top: 1rem;
+    font-weight: var(--medium-font);
+    /* margin-bottom: var(--bottom-margin); */
+}
+
+.intro p {
     font-weight: var(--normal-font);
     line-height: var(--line-height);
     padding: 0.3
     rem 0;
-}
-
-.projects {
-    background-color: var(--bg-color);
-    padding: 32px 0;
-    margin-top: 2rem;
-}
-  
-.project-pic {
-    width: 100%;
-    height: 60%;
-}
-  
-.projects-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.projects-title {
-    font-weight: var(--medium-font);
-    text-align: center;
-    margin-bottom: 1rem;
-}
-  
-.project-container {
-    text-align: center;
-    width: 21.875rem;
-    padding: 1rem;
-}
-
-.project-container p {
-    padding: 0.4rem;
-}
-  
-.project-title {
-    font-weight: var(--normal-font);
-    margin-bottom: var(--bottom-margin);
-}
-  
-.project-details {
-    font-weight: var(--normal-font);
-    margin-bottom: var(--bottom-margin);
-}
-  
-.project-card {
-    background-color: #fff;
-    border-radius: 11px;
-    box-shadow: 0 3px 10px var(--primary-shadow);
-    padding: 20px;
-    margin: 10px;
-}
-
-.socials {
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    right: 1%;
-    bottom: 50%;
-}
-  
-.socicon {
-    border-radius: 100%;
-    width: 2rem;
-    height: 2rem;
 }
 
 footer {
@@ -239,69 +180,12 @@ footer {
     nav ul.show {
         transform: translateX(0);
     }
-  
-    .hero {
-        margin-top: -4rem;
+
+    .intro {
         flex-direction: column;
-        gap: 0;
-    }
-  
-    .hero img {
-        height: 37.5rem;
-        width: 30rem;
-    }
-  
-    .bio {
-        margin-top: -7rem;
-        width: 20.5rem;
-    }
-  
-    .more-about {
-        margin-top: 2rem;
-        padding: 1rem 3.5rem;
-    }
-  
-    .more-about h2 {
-        text-align: center;
-    }
-  
-    .more-about p {
-        text-align: justify;
-    }
-  
-    .icon {
-        width: 5.875rem;
-        height: 5.25rem;
-    }
-  
-    .projects-container {
-        flex-direction: column;
-    }
-  
-    .project-container {
-        width: 20.875rem;
-    }
-  
-    .contact-form-container {
-        max-width: 23.75rem;
     }
 }
   
 @media screen and (max-width: 420px) {
-    .hero img {
-        height: 37.5rem;
-        width: 23rem;
-    }
     
-    .bio {
-        width: 18.3rem;
-    }
-    
-    .project-container {
-        width: 17.875rem;
-    }
-    
-    .contact-form-container {
-        max-width: 17.75rem;
-    }
 }
