--- a/assets/projectPages/groovyAssets/groovycss/styles.css
+++ b/assets/projectPages/groovyAssets/groovycss/styles.css
@@ -112,11 +112,13 @@ nav ul li {
     justify-content: left;
     gap: 2.5rem;
     max-width: 68.75rem;
-    
+
     margin-right: auto;
     margin-left: auto;
     margin-bottom: auto;
     margin-top: 2rem;
+
+    /* background-color: var(--bg-color); */
 }
 
 .intro_left h2 {
@@ -137,8 +139,44 @@ nav ul li {
 .intro p {
     font-weight: var(--normal-font);
     line-height: var(--line-height);
-    padding: 0.3
-    rem 0;
+    padding: 0.3;
+}
+
+.design_question {
+    display: block;
+    align-items: center;
+    justify-content: center;
+    gap: 2.5rem;
+    max-width: 68.75rem;
+
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: auto;
+    margin-top: 5rem;
+
+    /* Must have this to align question to the center, 
+    otherwise text will still align left. */
+    text-align: center;
+}
+
+.design_question hr{
+    text-align:center;
+    margin-left: 5rem;
+    margin-right: 5rem;
+}
+
+.design_question h4{
+    margin-top: 5rem;
+
+    font-weight: var(--medium-font);
+}
+
+.design_question p{
+    font-weight: var(--normal-font);
+    line-height: var(--line-height);
+    padding: 0.3;
+
+    margin-bottom: 5rem;
 }
 
 footer {
