added media query alteration for design question strip

--- a/assets/projectPages/groovyAssets/groovycss/styles.css
+++ b/assets/projectPages/groovyAssets/groovycss/styles.css
@@ -199,6 +199,13 @@ footer {
 }
 
 /* Media queries for responsiveness */
+@media screen and (max-width: 1120px) {
+    .intro {
+        margin-left: 3rem;
+        margin-right: 3rem;
+    }
+}
+
 @media screen and (max-width: 720px) {
     nav {
         padding: 1.5rem 1rem;   
@@ -238,11 +245,9 @@ footer {
     .intro_right {
         margin-top: 0px;
     }
-}
 
-@media screen and (max-width: 1120px) {
-    .intro {
-        margin-left: 3rem;
-        margin-right: 3rem;
+    .design_question p{
+        margin-left: 8rem;
+        margin-right: 8rem;
     }
 }
