--- a/assets/projectPages/groovyAssets/groovycss/styles.css
+++ b/assets/projectPages/groovyAssets/groovycss/styles.css
@@ -167,7 +167,6 @@ nav ul li {
 
 .design_question h4{
     margin-top: 5rem;
-
     font-weight: var(--medium-font);
 }
 
@@ -179,6 +178,96 @@ nav ul li {
     margin-bottom: 5rem;
 }
 
+.research {
+    display: block;
+    align-items: center;
+    justify-content: center;
+    gap: 2.5rem;
+    max-width: 68.75rem;
+
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: auto;
+    margin-top: 5rem;
+
+    /* Must have this to align question to the center, 
+    otherwise text will still align left. */
+    text-align: center;
+}
+
+.research h4{
+    margin-top: 5rem;
+    font-weight: var(--medium-font);
+}
+
+.research p{
+    font-weight: var(--normal-font);
+    line-height: var(--line-height);
+    padding: 0.3;
+
+    margin-bottom: 2rem;
+
+    margin-left: 8rem;
+    margin-right: 8rem;
+}
+
+.research ol{
+    text-align: left;
+
+    font-weight: var(--normal-font);
+    line-height: var(--line-height);
+    padding: 0.3;
+
+    margin-left: 4rem;
+    margin-right: 4rem;
+
+    margin-bottom: 5rem;
+}
+
+.research li{
+    margin-bottom: 1rem;
+}
+
+.survey_process{
+    text-align: left;
+
+    margin-left: 8rem;
+    margin-right: 8rem;
+}
+
+.survey_intended_respondents{
+    text-align: left;
+
+    margin-left: 8rem;
+    margin-right: 8rem;
+}
+
+.survey_limitations_title {
+    text-align: left;
+    margin-top: 5rem;
+    font-weight: var(--medium-font);
+    
+    margin-left: 4rem;
+    margin-right: 4rem; 
+    margin-bottom: 0.5rem;
+}
+
+.survey_limitations_ul {
+    text-align: left;
+    list-style-type: disc;
+    font-weight: var(--normal-font);
+
+    margin-left: 4rem;
+    margin-right: 4rem;
+}
+
+.research iframe{
+    width:70%;
+    height:500px;
+}
+
+
+/* FOOTER */
 footer {
     background-color: var(--bg-color);
     padding: 1.25rem;
