fixed margin styling error for last 2 strips of ihf section

--- a/assets/projectPages/groovyAssets/groovycss/styles.css
+++ b/assets/projectPages/groovyAssets/groovycss/styles.css
@@ -426,7 +426,7 @@ nav ul li {
 
 .ihf_strip {
     display: flex;
-    align-items: left;
+    align-items: center;
     justify-content: left;
     gap: 2.5rem;
     max-width: 68.75rem;
@@ -435,8 +435,6 @@ nav ul li {
     margin-left: auto;
     margin-bottom: auto;
     margin-top: 2rem;
-
-    /* background-color: var(--bg-color); */
 }
 
 .ihf_strip_right{
@@ -447,6 +445,8 @@ nav ul li {
     margin-top: 1rem;
     font-weight: var(--medium-font);
     /* margin-bottom: var(--bottom-margin); */
+
+    text-align: center;
 }
 
 .ihf_strip_right p {
