added slideshow for before and after revision

--- a/assets/projectPages/groovyAssets/groovycss/styles.css
+++ b/assets/projectPages/groovyAssets/groovycss/styles.css
@@ -457,6 +457,7 @@ nav ul li {
 
 .ihf_strip_img {
     max-width: 17rem;
+    border-radius:35px;
 }
 
 /* Reiteration Section */
@@ -499,6 +500,51 @@ nav ul li {
     text-align: left;
 }
 
+/* Slide Show styling */
+.mySlides1, .mySlides2 .mySlides3 {display: none}
+
+/* Slideshow container */
+.slideshow-container {
+    max-width: 100%;
+    position: relative;
+    margin: auto;
+    background-color: var(--bg-color);
+    border-radius: 25px;
+
+    box-shadow: 0 3px 5px rgba(0,0,0,0.1);
+}
+
+/* Next & previous buttons */
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 90%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.3s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+/* Hide left */
+.prev {
+    display: none;
+}
+
+/* On hover, add a grey background color */
+.prev, .next {
+    background-color: #dcdcdc;
+}
+
 .font_and_colour_main_div{
     display: flex;
     align-items: center;
@@ -516,10 +562,6 @@ nav ul li {
     width: 20rem;
 }
 
-
-/* Learnings and Improvements section */
-
-/* Initial Highfi Features Section */
 .learnings_and_improvements {
     display: block;
     align-items: center;
