changed groovy groceries main finding card bg colour

--- a/assets/projectPages/groovyAssets/groovycss/styles.css
+++ b/assets/projectPages/groovyAssets/groovycss/styles.css
@@ -296,15 +296,14 @@ nav ul li {
 .Column {
     display: table-cell;
 
-    background-color: rgb(63, 171, 108);
+    background-color: rgb(230, 230, 230);
 
     border-radius: 6px;
     
     text-align: center;
     vertical-align: middle;
     padding: 0.5rem;
-    border-style: dashed;
-    border-color: var(--bg-color);
+    box-shadow: 0 3px 5px rgba(0,0,0,0.1);
 }
 
 .empathy_map{
