--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,7 +8,7 @@
   --bold-font: 800;
   --bg-color: #fcfcfc;
   --primary-color: #000000;
-  --secondary-color: #e42158;
+  --secondary-color: #8ea9df;
   --primary-shadow: #e3e1e1;
   --secondary-shadow: #e3e1e1;
   --bottom-margin: 0.5rem;
@@ -39,7 +39,7 @@ a {
 }
 
 a:hover {
-  color: var(--secondary-color);
+  color: #7972da;
 }
 
 body {
@@ -96,8 +96,11 @@ nav ul li {
     align-items: center;
     justify-content: center;
     gap: 2.5rem;
-    max-width: 68.75rem;
+    max-width: 100%;
     margin: auto;
+
+    background-color: var(--secondary-color);
+
 }
 
 .hero img {
@@ -108,6 +111,7 @@ nav ul li {
 .bio {
     width: 25rem;
     padding: 0.625rem;
+    background-color: var(--secondary-color);
     /* border-radius: 6px;
     box-shadow: 0px 2px 15px 2px var(--primary-shadow); */
 }
@@ -116,6 +120,8 @@ nav ul li {
     background-color: var(--bg-color);
     font-weight: var(--medium-font);
     margin-bottom: var(--bottom-margin);
+
+    background-color: var(--secondary-color);
 }
 
 .bio p {
@@ -124,6 +130,8 @@ nav ul li {
     line-height: var(--line-height);
     padding: 0.3
     rem 0;
+
+    background-color: var(--secondary-color);
 }
 
 .projects {
@@ -182,10 +190,10 @@ nav ul li {
     padding-left: 25px;
     border-style: solid;
     border-radius: 25px;
-    border-color: rgb(21, 18, 18);
+    border-color: var(--secondary-color);
     border-width: 5px;
-    background-color: rgb(21, 18, 18);
-    color: rgb(255, 255, 255);
+    background-color: var(--secondary-color);
+    color: rgb(242, 242, 242);
 }
 
 .socials {
