--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -100,7 +100,6 @@ nav ul li {
     margin: auto;
 
     background-color: var(--secondary-color);
-
 }
 
 .hero img {
@@ -142,7 +141,7 @@ nav ul li {
   
 .project-pic {
     width: 100%;
-    height: 60%;
+    height: 100%;
 }
   
 .projects-container {
@@ -178,11 +177,11 @@ nav ul li {
 }
   
 .project-card {
-    background-color: #fff;
-    border-radius: 11px;
-    box-shadow: 0 3px 10px var(--primary-shadow);
+    background-color: var(--bg-color);
+    /* border-radius: 11px; */
+    /* box-shadow: 0 3px 10px var(--primary-shadow); */
     padding: 20px;
-    margin: 10px;
+    margin: 0px;
 }
 
 .project-link {
@@ -272,6 +271,8 @@ footer {
     .bio {
         margin-top: -7rem;
         width: 20.5rem;
+
+        margin-bottom: 2.5rem;
     }
   
     .more-about {
