--- a/assets/projectPages/groovyAssets/groovycss/styles.css
+++ b/assets/projectPages/groovyAssets/groovycss/styles.css
@@ -15,6 +15,7 @@
   --bottom-margin-2: 1rem;
   --line-height: 1.7rem;
   --transition: 0.3s;
+  --box-shadow: 6px 6px 19px -3px #e1e2e7;
 }
 /* Variables end */
 
@@ -312,7 +313,7 @@ nav ul li {
     text-align: center;
     vertical-align: middle;
     padding: 0.5rem;
-    box-shadow: 0 3px 5px rgba(40, 18, 18, 0.1);
+    box-shadow: var(--box-shadow);
 
     color: #4b7e8a;
 }
@@ -536,8 +537,34 @@ nav ul li {
     width: 15rem;
 }
 
-.finalSolutionGifs img {
-    width: 30%;
+.final_solution_card {
+    display: flex;
+    width: 100%;
+    height: 34rem;
+    box-shadow: var(--box-shadow);
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    border-radius: 1.5rem;
+
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    padding-left: 1rem;
+}
+
+.final_solution_card .gif {
+    width: 40%;
+}
+
+.final_solution_card img {
+    width: auto;
+    height: 100%;
+    box-shadow: var(--box-shadow);
+}
+
+.final_solution_card .words {
+    padding-left: 4rem;
+    padding-right: 4rem;
+    width: 50%;
 }
 
 .learnings_and_improvements {
@@ -644,6 +671,32 @@ footer {
     .font_and_colour_main_div {
         margin-left: 3rem;
         margin-right: 3rem;
+    }
+
+    .final_solution_card {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: auto;
+
+        align-items: center;
+    }
+    
+    .final_solution_card .gif {
+        height: 40%;
+    }
+    
+    .final_solution_card img {
+        width: 100%;
+        height: auto;
+        box-shadow: var(--box-shadow);
+    }
+    
+    .final_solution_card .words {
+        padding-left: 2rem;
+        padding-right: 2rem;
+        width: 95%;
+        text-align: center;
     }
 
     .learnings_and_improvements {
