--- a/assets/projectPages/noteableAssets/noteablecss/styles.css
+++ b/assets/projectPages/noteableAssets/noteablecss/styles.css
@@ -8,7 +8,7 @@
   --bold-font: 800;
   --bg-color: #fcfcfc;
   --primary-color: #000000;
-  --secondary-color: #e42158;
+  --secondary-color: #8ea9df;
   --primary-shadow: #e3e1e1;
   --secondary-shadow: #e3e1e1;
   --bottom-margin: 0.5rem;
