--- a/assets/projectPages/noteableAssets/noteablecss/styles.css
+++ b/assets/projectPages/noteableAssets/noteablecss/styles.css
@@ -47,6 +47,13 @@ body {
   font-family: var(--font-family);
 }
 
+p.p_alignCenter {
+    display: block; 
+    text-align: center; 
+
+    background-color: green;
+}
+
 nav {
     position: sticky;
     top: 0;
@@ -107,253 +114,6 @@ nav ul li {
     width: 100%;
 }
 
-.intro {
-    display: flex;
-    align-items: left;
-    justify-content: left;
-    gap: 2.5rem;
-    max-width: 68.75rem;
-
-    margin-right: auto;
-    margin-left: auto;
-    margin-bottom: auto;
-    margin-top: 2rem;
-
-    /* background-color: var(--bg-color); */
-}
-
-.intro_left h2 {
-    font-weight: var(--medium-font);
-    margin-bottom: var(--bottom-margin);
-}
-
-.intro_right{
-    margin-top: 2rem;
-}
-
-.intro_right h4 {
-    margin-top: 1rem;
-    font-weight: var(--medium-font);
-    /* margin-bottom: var(--bottom-margin); */
-}
-
-.intro p {
-    font-weight: var(--normal-font);
-    line-height: var(--line-height);
-    padding: 0.3;
-}
-
-.design_question {
-    display: block;
-    align-items: center;
-    justify-content: center;
-    gap: 2.5rem;
-    max-width: 68.75rem;
-
-    margin-right: auto;
-    margin-left: auto;
-    margin-bottom: auto;
-    margin-top: 5rem;
-
-    /* Must have this to align question to the center, 
-    otherwise text will still align left. */
-    text-align: center;
-}
-
-.design_question hr{
-    text-align:center;
-    margin-left: 5rem;
-    margin-right: 5rem;
-}
-
-.design_question h4{
-    margin-top: 5rem;
-    font-weight: var(--medium-font);
-}
-
-.design_question p{
-    font-weight: var(--normal-font);
-    line-height: var(--line-height);
-    padding: 0.3;
-
-    margin-bottom: 5rem;
-}
-
-.ideation_empathymap_painpoints_informationarchitecture{
-    display: block;
-    align-items: center;
-    justify-content: center;
-    max-width: 68.75rem;
-
-    margin-right: auto;
-    margin-left: auto;
-    margin-bottom: auto;
-    margin-top: 2rem;
-}
-
-
-.ideation_empathymap_painpoints_informationarchitecture h4{
-    margin-top: 5rem;
-    font-weight: var(--medium-font);
-
-    text-align: center;
-}
-
-.ideation_empathymap_painpoints_informationarchitecture p{
-    font-weight: var(--normal-font);
-    line-height: var(--line-height);
-    padding: 0.3;
-}
-
-.Row {
-    display: table;
-    width: 100%;
-    table-layout: fixed; 
-    border-spacing: 10px;
-}
-.Column {
-    display: table-cell;
-
-    text-align: center;
-    vertical-align: middle;
-    padding: 0.5rem;
-
-    border-radius: 5px;
-
-    background-color: #e8e8e8;
-    box-shadow: 0 3px 5px rgba(0,0,0,0.1);
-}
-
-.client_initial_design {
-    display: block;
-    align-items: center;
-    justify-content: center;
-    gap: 2.5rem;
-    max-width: 68.75rem;
-
-    margin-right: auto;
-    margin-left: auto;
-    margin-bottom: auto;
-    margin-top: 2rem;
-}
-
-.client_initial_design img{
-    width: 33%;
-}
-
-.empathy_map_section {
-    margin-left: 2rem;
-    margin-right: 2rem;
-    text-align: center;
-}
-
-.empathy_map{
-    max-height: auto; 
-    width: 60%;
-}
-
-.pain_points_section {
-    margin-left: 2rem;
-    margin-right: 2rem;
-    text-align: center;
-}
-
-.pain_points{
-    max-height: auto; 
-    width: 100%;
-}
-
-.info_architecture {
-    margin-left: 2rem;
-    margin-right: 2rem;
-    text-align: center;
-}
-
-
-.info_arch{
-    max-height: auto; 
-    width: 100%;
-}
-
-.wireframes_section{
-    display: block;
-    align-items: center;
-    justify-content: center;
-    gap: 2.5rem;
-    max-width: 68.75rem;
-
-    margin-right: auto;
-    margin-left: auto;
-    margin-bottom: auto;
-    margin-top: 2rem;
-}
-
-.wireframes_section h4{
-    margin-top: 5rem;
-    font-weight: var(--medium-font);
-    
-    text-align: center;
-}
-
-.wireframes_section p{
-    font-weight: var(--normal-font);
-    line-height: var(--line-height);
-    padding: 0.3;
-}
-
-.wf_img{
-    width: 100%;
-}
-
-.Row_wf {
-    display: table;
-    width: 100%;
-    table-layout: fixed; 
-    border-spacing: 10px;
-}
-.Column_wf {
-    display: table-cell;
-    text-align: center;
-    vertical-align: middle;
-    padding: 0.5rem;
-}
-
-.final_section{
-    display: block;
-    align-items: center;
-    justify-content: center;
-    gap: 2.5rem;
-    max-width: 68.75rem;
-
-    margin-right: auto;
-    margin-left: auto;
-    margin-bottom: auto;
-    margin-top: 2rem;
-}
-
-.final_section h4{
-    font-weight: var(--medium-font);
-    
-    text-align: center;
-}
-
-.final_section p{
-    font-weight: var(--normal-font);
-    line-height: var(--line-height);
-    padding: 0.3;  
-}
-
-.final_features_GIF {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 55%;
-    box-shadow: var(--box-shadow);
-}
-
-.conclusion h4{
-    margin-top: 4rem;
-}
 
 
 /* FOOTER */
@@ -376,47 +136,12 @@ footer {
     height: 3rem;
 }
 
-/* Media queries for responsiveness */
-@media screen and (max-width: 1120px) {
-    .intro {
-        margin-left: 3rem;
-        margin-right: 3rem;
-    }
+/* Media queries */
+@media screen and (max-width: 1200px) {
 
-    .design_question p{
-        margin-left: 8rem;
-        margin-right: 8rem;
-    }
-
-    .ideation_empathymap_painpoints_informationarchitecture{
-        margin-left: 3rem;
-        margin-right: 3rem;
-    }
-
-    .client_initial_design{
-        display: block;
-        align-items: center;
-        align-content: center;
-    }
-
-    .client_initial_design img{
-        width: 100%;
-        align-items: center;
-        align-content: center;
-    }
-
-    .wireframes_section{
-        margin-left: 3rem;
-        margin-right: 3rem;
-    }
-
-    .final_section{
-        margin-left: 3rem;
-        margin-right: 3rem;
-    }
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 768px) {
     nav {
         padding: 1.5rem 1rem;   
     }
@@ -443,43 +168,8 @@ footer {
     nav ul.show {
         transform: translateX(0);
     }
+}
 
-    .intro {
-        margin-top: 2rem;
-        margin-left: 3rem;
-        margin-right: 3rem;
+@media screen and (max-width: 320px) {
 
-        flex-direction: column;
-    }
-
-    .intro_right {
-        margin-top: 0px;
-    }
-
-    .ideation_empathymap_painpoints_informationarchitecture{
-        margin-left: 3rem;
-        margin-right: 3rem;
-    }
-
-    .client_initial_design{
-        display: block;
-        align-items: center;
-        align-content: center;
-    }
-
-    .client_initial_design img{
-        width: 100%;
-        align-items: center;
-        align-content: center;
-    }
-
-    .wireframes_section{
-        margin-left: 3rem;
-        margin-right: 3rem;
-    }
-
-    .final_section{
-        margin-left: 3rem;
-        margin-right: 3rem;
-    }
 }
